# mathcrypto

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: codacy-analysis.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  mathcrypto.rst
mathcrypto/: __init__.py  crypto.py  elliptic.py  funcs.py  groups.py
mathcrypto/cryptography/: __init__.py  diffie_hellman.py  primes.py
mathcrypto/math/: __init__.py  funcs.py  groups.py
tests/: test_cryptography_primes.py  test_math_funcs.py  test_math_groups.py
