[metadata]
name = mathcrypto
version = 0.2.4.beta2

description = A library of useful funtions used in cryptography. For learning purposes only.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Czechbol/mathcrypto
project_urls =
    Bug Tracker = https://github.com/Czechbol/mathcrypto/issues
keywords= mathematics, number_theory, prime_numbers, cryptography

author = Adam Ludes
author_email = adam@ludes.cz

license = MIT
license_file = LICENSE

classifiers =
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
package_dir =
	=.
packages = find:
python_requires = >=3.7
